[tool.poetry]
name = "gh-r-wrapper-poc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rpy2 = "^3.5.16"
pyarrow = "^16.1.0"
rpy2-arrow = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
